sửa DAO thành singleton